fix offscreen close

--- a/src/ChromeExtension/css/popup.css
+++ b/src/ChromeExtension/css/popup.css
@@ -1,9 +1,11 @@
 html {
-    width: 700px;
+    width: 800px;
+    height:200px;
 }
 
 body {
-    width: 700px;
+    width: 800px;
+    height:200px;
     font-size: 150%;
     margin: 0;
     padding: 0;
@@ -52,12 +54,13 @@ label{
 
 button,
 input {
-    font-size: inherit;
+    font-size: 100%;
     border-radius: 5px;
 }
 
 input[type="url"]{
-    width:80%;
+    width:95%;
+    font-size: 85%;
 }
 
 input[type="url"]:valid{
